# SimpleKernel

./: README.md  README_en.md  simplekernel.iso
cmake/: header_files.cmake
devlog/: devlog20191221.md  devlog20200306.md
src/: CMakeLists.txt
src/arch/x86_64/: CMakeLists.txt  arch_init.c  cpu.hpp
src/arch/x86_64/boot/: CMakeLists.txt  boot.s  bootinit.c  link32.ld  link64.ld
src/arch/x86_64/boot/include/: bootinit.h
src/arch/x86_64/debug/: CMakeLists.txt  debug.c
src/arch/x86_64/gdt/: CMakeLists.txt  gdt.c
src/arch/x86_64/heap/: CMakeLists.txt  heap.c
src/arch/x86_64/intr/: CMakeLists.txt  intr.c  intr_s.s
src/arch/x86_64/mm/: CMakeLists.txt  pmm.c  vmm.c
src/arch/x86_64/sched/: sched.c
src/arch/x86_64/task/: task.c  task_s.s
src/drv/: CMakeLists.txt
src/drv/8259A/: 8259A.c
src/drv/clock/: CMakeLists.txt  clock.c
src/drv/clock/include/: clock.h
src/drv/console/: console.c
src/drv/console/include/: console.h
src/drv/keyboard/: keyboard.c
src/drv/mouse/: CMakeLists.txt  mouse.c
src/drv/mouse/include/: mouse.h
src/drv/vga/include/: vga.hpp
src/ds_alg/: CMakeLists.txt  LinkedList.c
src/ds_alg/include/: alg.h  linkedlist.h
src/include/: debug.h  elf.h  multiboot2.h
src/include/heap/: heap.h
src/include/mem/: buddy.h  firstfit.h  pmm.h  slab.h  vmm.h
src/include/sched/: sched.h
src/include/task/: task.h
src/kernel/: CMakeLists.txt  elf.c  kernel.c  multiboot2.c
src/kernel/include/: kernel.h
src/kernel/mem/: CMakeLists.txt  fitst_fit.c  slab.c
src/test/: CMakeLists.txt  test.c
src/test/include/: test.h
(+2 files in other folders)
